--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "type": "library",
   "description": "vue asset for yii 2.0 or higher",
   "require": {
-    "codexten/yii-web": "~2.0.0"
+    "codexten/yii-web": "~2.0.0",
+    "npm-asset/vue": "~2.6.0"
   },
   "autoload": {
     "psr-4": {
